Adding a fourth energy cost fee.
