# solar-persistence/src/main/java/moller/solar/solarpersistence/persistence/entity/EnergyCostEntryEntity.java
@@ -14,6 +14,7 @@ public class EnergyCostEntryEntity {
     public static final String FEE_ONE_IN_TEN_THOUSANDS = "FEE_ONE_IN_TEN_THOUSANDS";
     public static final String FEE_TWO_IN_TEN_THOUSANDS = "FEE_TWO_IN_TEN_THOUSANDS";
     public static final String FEE_THREE_IN_TEN_THOUSANDS = "FEE_THREE_IN_TEN_THOUSANDS";
+    public static final String FEE_FOUR_IN_TEN_THOUSANDS = "FEE_FOUR_IN_TEN_THOUSANDS";
     public static final String ENERGY_COST_PER_KWH_IN_TEN_THOUSANDS = "ENERGY_COST_PER_KWH_IN_TEN_THOUSANDS";
     public static final String ELECTRICAL_GRID_COST_IN_TEN_THOUSANDS = "ELECTRICAL_GRID_COST_IN_TEN_THOUSANDS";
     public static final String VALUE_ADDED_TAX_PERCENTAGE_RATE_IN_MINOR_UNIT = "VALUE_ADDED_TAX_PERCENTAGE_RATE_IN_MINOR_UNIT";
@@ -38,6 +39,9 @@ public class EnergyCostEntryEntity {
 
     @Column(name = FEE_THREE_IN_TEN_THOUSANDS)
     private Integer feeThreeInTenThousands;
+
+    @Column(name = FEE_FOUR_IN_TEN_THOUSANDS)
+    private Integer feeFourInTenThousands;
 
     @Column(name = ENERGY_COST_PER_KWH_IN_TEN_THOUSANDS)
     private Integer energyCostPerKwhInTenThousands;
@@ -78,6 +82,10 @@ public class EnergyCostEntryEntity {
         return feeThreeInTenThousands;
     }
 
+    public Integer getFeeFourInTenThousands() {
+        return feeFourInTenThousands;
+    }
+
     public Integer getEnergyCostPerKwhInTenThousands() {
         return energyCostPerKwhInTenThousands;
     }
@@ -112,6 +120,10 @@ public class EnergyCostEntryEntity {
 
     public void setFeeThreeInTenThousands(Integer feeThreeInTenThousands) {
         this.feeThreeInTenThousands = feeThreeInTenThousands;
+    }
+
+    public void setFeeFourInTenThousands(Integer feeFourInTenThousands) {
+        this.feeFourInTenThousands = feeFourInTenThousands;
     }
 
     public void setEnergyCostPerKwhInTenThousands(Integer energyCostPerKwhInTenThousands) {
